<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="50dp"/>

        <EditText
            android:id="@+id/pet_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pet_name_hint"
            android:layout_marginBottom="16dp"/>

        <Spinner
            android:id="@+id/pet_type_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"/>

        <Spinner
            android:id="@+id/pet_gender_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"/>

        <Button
            android:id="@+id/birth_date_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/birth_date_hint"
            android:layout_marginBottom="16dp"/>

        <Button
            android:id="@+id/adoption_date_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/adoption_date_hint"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/important_info_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/important_info_hint"
            android:inputType="textMultiLine"
            android:minLines="3"
            android:layout_marginBottom="16dp"/>

        <Button
            android:id="@+id/save_pet_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_pet"/>
    </LinearLayout>
</ScrollView>